syntax = "proto3";

package geo_gen;

option go_package="geo.gen.v1;geov1";

service GeoService {
  rpc GetSearchResponse (SearchRequest) returns (SearchResponse);
  rpc GetGeoResponse (GeoRequest) returns (GeoResponse);
}
message SearchRequest  {
  string Lat = 1;
  string Lon = 2;
}
message SearchResponse {
  string Result = 1;
  string Lat = 2;
  string Lon = 3;
}


message GeoRequest {
  string Query = 1;
}
message GeoResponse {
  string Result = 1;
  string Lat = 2;
  string Lon = 3;
}